# Prosodia

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  PROJECT_TOPOLOGY.md  README.md  ROADMAP.md  STUDIO_INSTRUCTIONS.md  STUDIO_MANIFEST.md  STUDIO_STATE.md  build_android.sh  build_frameworks.sh  prosodia_config.json
Docs/: ARCHITECTURE.md  CONTRIBUTING.md
Documentation/: .gitkeep
Matcha-TTS/: .gitignore
apps/android-reader/: local.properties  settings.gradle.kts
apps/android-reader/app/: build.gradle.kts  proguard-rules.pro
apps/apple-reader/AppleReader/: AppleReaderApp.swift  AuditionConfiguration.swift  ProsodiaConfig.swift  ReaderContentView.swift  ReaderDemo.swift  SamplePassageStore.swift  SamplePassages.txt.example  TuningFeedbackLogger.swift
apps/apple-reader/AppleReader.xcodeproj/: project.pbxproj
apps/tuner/: README.md
apps/tuner-extension/: LICENSE  README.md  content.js  manifest.json  popup.css  popup.html  popup.js
apps/tuner/ProsodiaTuner.xcodeproj/: project.pbxproj
crates/actor/: Cargo.toml  build.rs
crates/actor/src/: asset_manager.rs  chunking.rs  engine.rs  g2p.rs  lexicon.rs  lib.rs  normalization.rs  pipeline.rs  tagger.rs  tflite.rs  voice_loader.rs
crates/core/: Cargo.toml
crates/director/: Cargo.toml
crates/folioparser/: Cargo.toml
crates/folioparser/src/: lib.rs  zip_reader.rs
crates/stage/: Cargo.toml
crates/stage/src/: acoustic_matrix.rs  audio_shaping.rs  coordinator.rs  director_annotation.rs  lib.rs  markup_parser.rs  phrasing.rs  prosody.rs  prosody_payload.rs  segmenter.rs  tokenizer.rs
(+33 files in other folders)
