[package]
name = "actor"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = "0.27"
stage = { path = "../stage" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
regex = "1.10"
once_cell = "1.19"



[lib]
crate-type = ["cdylib", "staticlib", "lib"]
