[package]
name = "stage"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.27", features = ["cli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
regex = "1.10"



[lib]
crate-type = ["cdylib", "staticlib", "lib"]
